--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-wasmtime = "33.0.0"
-anyhow = "1.0.98"
+wasmtime = "34.0.1"
 bytemuck = "1.23.1"
+color-eyre = "0.6.5"
+anyhow = "1.0.98"
+tokio = { version = "1.46.1", features = ["sync"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
