--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-wasmtime = "34.0.2"
+wasmtime = { version = "34.0.2", features = ["async"] }
 bytemuck = "1.23.1"
 anyhow = "1.0.98"
-tokio = { version = "1.46.1", features = ["sync"] }
+tokio = { version = "1.46.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 enum-iterator = "2.1.0"
 asbind = { path = "asbind" }
+reqwest = { version = "0.12.22", features = ["json"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.141"
