--- a/.github/workflows/likec4.yaml
+++ b/.github/workflows/likec4.yaml
@@ -29,7 +29,7 @@ jobs:
       - uses: oven-sh/setup-bun@v2
       - name: build
         run: |
-          bunx likec4@1.34.2 build
+          bunx likec4@1.34.2 build --base-url karajan
       - name: Upload static files as artifact
         id: deployment
         uses: actions/upload-pages-artifact@v3 # or specific "vX.X.X" version tag for this action
